package com.experimental_software.spring_adventures.sales.entities;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import jakarta.validation.constraints.NotNull;
import java.math.BigDecimal;
import java.time.Instant;
import java.util.UUID;
import lombok.Getter;
import lombok.Setter;
import org.hibernate.annotations.ColumnDefault;

@Getter
@Setter
@Entity
@Table(name = "salestaxrate", schema = "sales")
public class Salestaxrate {

  @Id
  @GeneratedValue(strategy = GenerationType.IDENTITY)
  @Column(name = "salestaxrateid", nullable = false)
  private Integer id;

  @NotNull
  @Column(name = "taxtype", nullable = false)
  private Short taxtype;

  @NotNull
  @ColumnDefault("0.00")
  @Column(name = "taxrate", nullable = false)
  private BigDecimal taxrate;

  @Column(name = "name", columnDefinition = "\"Name\" not null")
  private Object name;

  @NotNull
  @ColumnDefault("uuid_generate_v1()")
  @Column(name = "rowguid", nullable = false)
  private UUID rowguid;

  @NotNull
  @ColumnDefault("now()")
  @Column(name = "modifieddate", nullable = false)
  private Instant modifieddate;
}
